--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "frontend router",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "zuul -- test/router_test.js"
   },
   "repository": {
     "type": "git",
@@ -21,26 +21,17 @@
   },
   "homepage": "https://github.com/xgbuils/frontpiece-router",
   "devDependencies": {
-    "karma": "^0.12.35",
-    "karma-browserify": "^4.2.1",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.1.10",
-    "karma-sauce-launcher": "^0.2.11",
     "browser-sync": "^2.7.6",
     "browserify": "^10.2.3",
+    "chai": "^3.0.0",
     "gulp": "^3.8.11",
+    "gulp-mocha": "^2.1.1",
     "gulp-util": "^3.0.5",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1"
+    "watchify": "^3.2.1",
+    "zuul": "1.0.1"
   },
   "dependencies": {
     "object-assign": "^2.0.0"
-  },
-  "saucelabs": {
-    "browsers": {
-      "firefox": ["4", "11", "21", "30", "35"],
-    }
   }
 }
