--- a/package.json
+++ b/package.json
@@ -27,11 +27,21 @@
     "gulp": "^3.8.11",
     "gulp-mocha": "^2.1.1",
     "gulp-util": "^3.0.5",
+    "karma": "^0.12.0",
+    "karma-browserify": "^4.2.1",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.1.10",
+    "karma-sauce-launcher": "^0.2.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1",
-    "zuul": "1.0.1"
+    "zuul": "^3.0.0"
   },
   "dependencies": {
     "object-assign": "^2.0.0"
+  },
+  "saucelabs": {
+    "browsers": {
+      "internet explorer": ["11"]
+    }
   }
 }
