update to test travis without zuul

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "frontend router",
   "main": "index.js",
   "scripts": {
-    "test": "zuul -- test/router_test.js"
+    "test": "karma start karma-sauce.conf.js"
   },
   "repository": {
     "type": "git",
