--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "karma": "^0.12.0",
     "karma-browserify": "^4.2.1",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.2",
+    "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.10",
     "karma-sauce-launcher": "^0.2.3",
     "vinyl-source-stream": "^1.1.0",
